Update requirements for AWS deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -106,7 +106,11 @@ jupyter_client==8.7.0
 jupyter_core==5.9.1
 jupyter_server==2.17.0
 jupyter_server_terminals==0.5.3
+jupyterlab==4.5.1
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.28.0
 kiwisolver==1.4.9
+kubernetes==34.1.0
 langchain==1.2.3
 langchain-classic==1.0.1
 langchain-community==0.4.1
@@ -254,9 +258,11 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
 uri-template==1.3.0
-urllib3
+urllib3==2.6.2
 uuid_utils==0.12.0
 uvicorn==0.40.0
+uvloop==0.22.1
+virtualenv==20.36.0
 watchdog==6.0.0
 watchfiles==1.1.1
 wcwidth==0.2.14
